objects/ESN_MB_Campaign_Taxonomy__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Campaign taxonomy for MyBrands</description>
    <fields>
        <fullName>ESN_MB_Fourth_Tier__c</fullName>
        <description>Fourth tier of taxonomy</description>
        <label>Tier 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Second_Tier__c</fullName>
        <description>Second tier of taxonomy</description>
        <label>Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Third_Tier__c</fullName>
        <description>Third tier of taxonomy</description>
        <label>Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MyBrands Campaign Taxonomy</label>
</CustomObject>